# distreviewed

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/distreview/workdir/: dna.yaml
dnas/distreview/zomes/coordinator/reviews/: Cargo.toml
dnas/distreview/zomes/coordinator/reviews/src/: all_papers.rs  lib.rs  paper.rs  paper_to_review.rs  review.rs
dnas/distreview/zomes/integrity/reviews_integrity/: Cargo.toml
dnas/distreview/zomes/integrity/reviews_integrity/src/: lib.rs  paper.rs  review.rs
tests/src/distreview/reviews/: paper.test.ts  review.test.ts
ui/: index.html  package.json  tsconfig.tsbuildinfo
ui/out-tsc/: holochain-app.js  holochain-app.js.map
ui/out-tsc/distreview/reviews/: all-papers.js  all-papers.js.map  create-paper.js  create-paper.js.map  create-review.js  create-review.js.map  paper-detail.js  paper-detail.js.map  paper-page.js  paper-page.js.map  paper.js  paper.js.map  review-detail.js  review-detail.js.map  review-for-paper.js  review-for-paper.js.map  review-for-review.js  review-for-review.js.map  review.js  review.js.map
ui/src/: holochain-app.ts
ui/src/distreview/reviews/: all-papers.ts  create-paper.ts  create-review.ts  paper-detail.ts  paper-page.ts  paper.ts  review-detail.ts  review-for-paper.ts  review-for-review.ts  review.ts
workdir/: happ.yaml  web-happ.yaml
