[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.157"
serde = "1"

[workspace.dependencies.reviews]
path = "dnas/distreview/zomes/coordinator/reviews"

[workspace.dependencies.reviews_integrity]
path = "dnas/distreview/zomes/integrity/reviews_integrity"
